Made image links work when you get the json

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=3000
 
-logging.level.root=INFO
-logging.file.name=myapp.log
+# Logging if you want to log, uncomment the following lines
+# logging.level.root=INFO
+# logging.file.name=myapp.log
