added spring security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 server.port=3000
 
+# Security configuration
+spring.security.user.name=user
+spring.security.user.password=testing
+
 # Logging if you want to log, uncomment the following lines
 # logging.level.root=INFO
 # logging.file.name=myapp.log
